* Updated the German translation.
* Added German formal and informal translations for Germany, Austria and Switzerland.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Indonesian translation.
* Updated partial translations.
* Added clarification on applicable post type access restrictions.
* Revised notice on supporting Groups.

= 2.14.1 =
* Removed outdated changelog section info.
* Updated Add-Ons section and removed entry for subsumed integration.

= 2.14.0 =
* WordPress 5.8 compatible.
* Minimum WordPress version 5.5 is required.
* Updated block registration to hook on the block_categories_all filter instead of the depdrecated block_categories filter.
* Updated block scripts based on wp-scripts instead of cgb-scripts.
* Imporved block UX to avoid confusing style-toggling when a block is selected.
* Fixed slashes would appear in group names offered in block group selection.
* Improved groups and capabilities admin pagination appearance to show navigation items as buttons.
* Fixed Groups > Groups admin section search by group name issues with quotes and improper query escaping.
* Fixed Groups > Capabilities admin section search by capability name issues with quotes and improper query escaping.
* Fixed [groups_member] and [groups_non_member] shortcodes not handling group names with quotes correctly.

= 2.13.0 =
* WordPress 5.7 compatible.
* Removed unnecessary magic method overrides in Groups_Options (also eliminates PHP 8 warning for __wakeup()).
* Added missing scope declarations to Groups_Pagination methods.
* Fixed potential issues when creating a group programmatically indicating the group's parent ID.
* Code-formatting clean-up: trailing spaces.

= 2.12.0 =
* WordPress 5.6 compatible.
* Updated info on add-ons.
* Fixed checking menu items so that only those that are related to a post type are processed for access checking.
* Minor visual adjustments to UI controls to filter by groups on admin pages.