@@ -11,6 +11,7 @@
 * Updated partial translations.
 * Added clarification on applicable post type access restrictions.
 * Revised notice on supporting Groups.
+* Removed the option to show legacy settings unless already enabled, or showing is enabled via the GROUPS_SHOW_LEGACY_SETTINGS constant.
 
 = 2.14.1 =
 * Removed outdated changelog section info.
